fix(body): fix horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   color: #3f3f3f;
   overflow-x: hidden;
   margin: 0 auto;
-  max-width: 1920px;
+  max-width: 100%;
 }
 
 .underline-effect {
